# CrazyAra

./: .codacy.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CrazyAra-log-bug.txt  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  config_template.yaml  crazyara.py  framework_benchmark.cpp  main.cpp  predictor.cpp  requirements.txt  setup.py  wiki_text.md
.github/workflows/: build.yml  cmake_build_tests.yml  only_new_variants.yml  variants.yml
DeepCrazyhouse/configs/: README.md  main_config.py  main_config_sample.py  main_config_template.py  model_config.py  rl_config.py  train_confi_template.py  train_config.py  train_config_template.py
DeepCrazyhouse/src/: .gitignore  README.md
build-engine-Desktop_Qt_5_12_11_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-engine-Desktop_Qt_5_12_11_GCC_64bit-Release/: .ninja_deps  .ninja_log  @XX_OpenSpielAra_tic_tac_toe_UP=0#first_epoch  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  games_gpu_0.pgn
cutechess-cli/: create_cutechess_plots.py  prs.py
deep_crazy_house/configs/: main_config_sample.py
deep_crazy_house/src/: README.md
engine/: .gitignore  CMakeLists.txt  README.md
engine/lib/dirent/: dirent.h
engine/src/: README.md  board.cpp  board.h  boardstate.cpp  boardstate.h  constants.h  crazyara.cpp  crazyara.h  evalinfo.cpp  evalinfo.h  main.cpp  node.cpp  node.h  nodedata.cpp  nodedata.h  optionsuci.cpp  optionsuci.h  pommermanstate.cpp  pommermanstate.h  searchthread.cpp  searchthread.h  searchthreadmaster.cpp  searchthreadmaster.h  state.cpp  state.h  stateobj.cpp  stateobj.h  version.h
engine/src/agents/: agent.cpp  agent.h  alphabetaagent.cpp  alphabetaagent.h  mctsagent.cpp  mctsagent.h  mctsagentbatch.cpp  mctsagentbatch.h  mctsagenttruesight.cpp  mctsagenttruesight.h  randomagent.cpp  randomagent.h  rawnetagent.cpp  rawnetagent.h
engine/src/agents/config/: playsettings.cpp  playsettings.h  rlsettings.cpp  rlsettings.h  searchlimits.cpp  searchlimits.h  searchsettings.cpp  searchsettings.h
engine/src/agents/util/: gcthread.cpp  gcthread.h  loggerthread.cpp  loggerthread.h
engine/src/chess_related/: board.cpp  board.h  boardstate.cpp  boardstate.h  chessbatchstream.cpp  chessbatchstream.h  crazyara.cpp  crazyara.h  inputrepresentation.cpp  main.cpp  optionsuci.cpp  outputrepresentation.cpp  outputrepresentation.h  sfutil.h
engine/src/domain/: variants.cpp  variants.h
engine/src/domain/crazyhouse/: constants.cpp  constants.h  inputrepresentation.cpp  inputrepresentation.h  outputrepresentation.cpp  outputrepresentation.h  policymaprepresentation.cpp  policymaprepresentation.h
engine/src/environments/chess_related/: board.cpp  board.h  boardstate.cpp  boardstate.h  chess960position.h  chessbatchstream.cpp  chessbatchstream.h  inputrepresentation.cpp  inputrepresentation.h  outputrepresentation.cpp  outputrepresentation.h  policymaprepresentation.h  sfutil.cpp  sfutil.h
engine/src/environments/fairy_state/: fairyboard.cpp  fairyboard.h  fairyinputrepresentation.cpp  fairyinputrepresentation.h  fairyoutputrepresentation.cpp  fairyoutputrepresentation.h  fairypolicymaprepresentation.h  fairystate.cpp  fairystate.h  fairyutil.cpp  fairyutil.h
engine/src/environments/open_spiel/: openspielstate.cpp  openspielstate.h
engine/src/environments/stratego_related/: strategostate.cpp  strategostate.h
engine/src/envs/open_spiel/: openspielstate.cpp  openspielstate.h
engine/src/manager/: statesmanager.cpp  statesmanager.h  threadmanager.cpp  threadmanager.h  timemanager.cpp  timemanager.h  treemanager.cpp  treemanager.h
engine/src/nn/: mxnetapi.cpp  mxnetapi.h  neuralnetapi.cpp  neuralnetapi.h  neuralnetapiuser.cpp  neuralnetapiuser.h  neuralnetdesign.cpp  neuralnetdesign.h  openvinoapi.cpp  openvinoapi.h  tensorrtapi.cpp  tensorrtapi.h  torchapi.cpp  torchapi.h
engine/src/nn/util/: chessbatchstream.cpp  chessbatchstream.h
engine/src/rl/: Dockerfile  Dockerfile_Hex  Dockerfile_Stratego  README.md  binaryio.py  fileio.py  gamepgn.cpp  gamepgn.h  inspect_rl_data.ipynb  rl_loop.py  rl_training.py  rl_utils.py  selfplay.cpp  selfplay.h  tournamentresult.cpp  tournamentresult.h  traindataexporter.cpp  traindataexporter.h
engine/src/tests/: benchmark_results.txt  benchmarkpositions.cpp  tests.cpp  tests.h
engine/src/uci/: crazyara.cpp  crazyara.h  customlogger.cpp  customlogger.h  customuci.h  main.cpp  optionsuci.cpp  optionsuci.h  timeoutreadythread.cpp  timeoutreadythread.h  types.h  uci.h  ucioption.cpp  variants.h  variants.ini
engine/src/util/: blazeutil.cpp  blazeutil.h  communication.cpp  communication.h  fixedvector.h  killablethread.h  randomgen.cpp  randomgen.h  sfutil.cpp  sfutil.h
engine/tests/: benchmarkpositions.cpp  benchmarkpositions.h  legacyconstants.h  tests.cpp  tests.h
etc/: analyse_pgn_headers.ipynb  create_loss_plots.ipynb  generate_cutechess_command.py  run_cutechess_experiments.py
etc/media/: README.md
etc/sf_self_play/: 1k_cz_lichess_startpos.pgn  lichess_opening_book_generator.ipynb  merge_sf_dataset.ipynb  sf_cz_game_generator.py
media/: README.md
model/params/: README.md
model/symbol/: README.md
src/: README.md  blazeutil.cpp  blazeutil.h  board.cpp  board.h  crazyara.cpp  crazyara.h  evalinfo.cpp  evalinfo.h  node.cpp  node.h  node_eigen.cpp  node_eigen.h  optionsuci.cpp  optionsuci.h  searchthread.cpp  searchthread.h  sfutil.cpp  sfutil.h  statesmanager.cpp  statesmanager.h  timemanager.cpp  timemanager.h
src/agents/: agent.cpp  agent.h  mctsagent.cpp  mctsagent.h  rawnetagent.cpp  rawnetagent.h
src/domain/: variants.cpp  variants.h
src/manager/: timemanager.cpp  timemanager.h  treemanager.cpp  treemanager.h
src/nn/: neuralnetapi.cpp  neuralnetapi.h
src/rl/: selfplay.cpp  selfplay.h  traindata.cpp  traindata.h  traindataexporter.cpp  traindataexporter.h
src/tests/: benchmarkpositions.h  planerepresentationtests.cpp  planerepresentationtests.h  policyrepresentationtests.cpp  policyrepresentationtests.h  tests.cpp  tests.h
(+738 files in other folders)
